# plonetheme.barceloneta

./: .editorconfig  .flake8  .gitattributes  .gitignore  .meta.toml  .npmignore  .pre-commit-config.yaml  .stylelintrc  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  Gruntfile.js  HOWTO_DEVELOP.md  HOWTO_DEVELOP.rst  HOWTO_DEVELOP.txt  MANIFEST.in  NOTES_TO_DO.rst  NPM_RELEASE.rst  README.md  README.rst  TO_DO.rst  bower.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  setup.cfg  setup.py  toolbar-demo.html  tox.ini
js/: barceloneta.js
less/: barceloneta.css  barceloneta.less  barceloneta.plone.less  breadcrumbs.plone.less  contents.plone.less  deco.plone.less  discussion.plone.less  footer.plone.less  forms.plone.less  header.plone.less  image.plone.less  main.plone.less  mixin.gridframework.plone.less  modal.plone.less  pickadate.plone.less  type.plone.less  variables.plone.less  views.plone.less
news/: +189.bugfix.md  +ajax_load.feature.md  +barceloneta-toolbar.feature.md  +bootstrap_5_3_7.bugfix.md  +dependency-maintenance.bugfix.md  +dependency_maintenance.bugfix.md  +dependency_updates.internal  +fix-tiny-padding.bugfix.md  +generalize-required.feature.md  +mobilemenu.feature.md  +tinymce_v8.feature.md  +update_bootstrap.bugfix.md  +upgrade_dependencies.internal.md  0.internal  1.bugfix  1111.bugfix  137.feature  154.bugfix  159.bugfix  170.bugfix  173.bugfix  176.bugfix  180.bugfix  181.bugfix  182.fix  183.bugfix  187.bugfix  202.bugfix  203.bugfix  207.bugfix  209.bugfix  210.bugfix  212.feature  217.bugfix  (+87 more)
(+474 files in other folders)
