[tool.towncrier]
filename = "CHANGES.rst"
directory = "news/"
title_format = "{version} ({project_date})"
underlines = ["-", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[tool.poetry]
name = "plonetheme.barceloneta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
"zest.releaser" = "6.20.1"
"zestreleaser.towncrier" = "1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
